firefox-trunk (26.0~a1~hg20130916r147315-0ubuntu2) UNRELEASED; urgency=low

  * Drop the python-progressbar build-conflict, as "make check" doesn't run
    the jit-tests now

 -- Chris Coulson <chris.coulson@canonical.com>  Tue, 17 Sep 2013 16:32:25 +0100

firefox-trunk (26.0~a1~hg20130916r147315-0ubuntu1) saucy; urgency=low

  * New upstream snapshot v26.0 A1 HG20130916R147315

  * Refresh patches
    - update d/p/test-integration/automation-output-junit-xml.patch
    - update d/p/test-integration/mochitest-allow-test-manifest-for-browser-chrome.patch
    - update d/p/test-fixes/xpcshell-exthandler-no-writes-to-appdir.patch
    - update d/p/test-integration/xpcshell-disable-tests-which-need-appdir-write-access.patch
    - update d/p/test-integration/xpcshell-dont-return-nonzero-on-test-failure.patch
    - update d/p/test-integration/xpcshell-write-time-for-failed-test.patch
    - update debian/patches/unity-menubar.patch
    - update debian/patches/ubuntu-ua-string-changes.patch
    - update debian/patches/no_neon_on_arm.patch
  * Drop patches
    - remove d/p/test-fixes/mochitest-browser-plugincrash-with-no-crashreporter.patch
    - remove d/p/test-fixes/mochitest-dont-ship-browser-postupdate-test.patch
    - remove d/p/test-fixes/mochitest-tests-jar-fix.patch
    - update debian/patches/series
  * Reenable unity-menubar.patch
  * Enable the gstreamer backend
    - update debian/control
    - update debian/config/mozconfig
  * Update for mochitest/runtests.py changes
    - update debian/testing/testrunhelper.py
  * Add libgl1-mesa-dri to firefox-testsuite depends so that gnome-session
    starts correctly in saucy
  * Fix LP: #1223502 - firefox-testsuite should depend on fonts-liberation
    rather than ttf-liberation

 -- Chris Coulson <chris.coulson@canonical.com>  Mon, 12 Aug 2013 11:49:31 +0100

firefox-trunk (25.0~a1~hg20130726r140000-0ubuntu1) saucy; urgency=low

  * New upstream snapshot v25.0 A1 HG20130726R140000

  * Refresh patches