@@ -14,6 +14,9 @@
 /@MOZ_LIBDIR@/firefox{,*[^s][^h]} {
   #include <abstractions/audio>
   #include <abstractions/cups-client>
+  # TODO: finetune this for required accesses
+  #include <abstractions/dbus>
+  #include <abstractions/dbus-accessibility>
   #include <abstractions/dbus-session>
   #include <abstractions/gnome>
   #include <abstractions/ibus>
